# mvp_dyxi_qt

./: Basee.qml  CMakeLists.txt  Main.qml  images.qrc  main.cpp  mmm.cpp  mmm.h
modules/AdhdModule/: CMakeLists.txt
modules/AdhdModule/modules/Phonics/: main.cpp
modules/AdhdModule/src/: apa.cpp  apa.h  tracabletext.cpp  tracabletext.h
modules/DyscalculiaModule/: CMakeLists.txt
modules/DyscalculiaModule/src/: apa.cpp  apa.h
modules/DyslexiaModule/: CMakeLists.txt  Entry.qml  main.cpp
modules/DyslexiaModule/modules/Phonics/: CMakeLists.txt
modules/DyslexiaModule/modules/Writing/: CMakeLists.txt  main.cpp
modules/DyslexiaModule/src/: speechmanager.cpp  speechmanager.h  tracabletext.cpp  tracabletext.h  tt.cpp  tt.h
src/AppController/: CMakeLists.txt  Main.qml  main.cpp
src/AppController/android/: AndroidManifest.xml  build.gradle
src/UIModule/: CMakeLists.txt
src/UIModule/Components/: BackComponent.qml  GameItem.qml  LoadingPage.qml  LoadingnPage.qml
src/UIModule/Components/Buttons/: ConfetiButton.qml  NeonButton.qml  PulseButton.qml
src/UIModule/Pages/: GameListPage.qml  GameLoaderPage.qml  LoginPage.qml  NewGamepPage.qml  RecentPage.qml  SelectGameCategoryPage.qml  WelcomePage.qml
src/UIModule/js/: NavigationTracker.js
src/coreLib/: CMakeLists.txt
src/coreLib/Dataset/: CMakeLists.txt  recognitionshapeexplorerdataset.cpp  recognitionshapeexplorerdataset.h  tracinglevel1dataset.cpp  tracinglevel1dataset.h
src/coreLib/General/: CMakeLists.txt  CoreSettings.hpp  abstracterrorprocessing.cpp  abstracterrorprocessing.h  audiomanipulator.cpp  audiomanipulator.h  audiotranscoder.cpp  audiotranscoder.h  comparestrings.cpp  comparestrings.h  errorprocessing.cpp  errorprocessing.h  networinfo.cpp  networinfo.h  networkaccessitemlist.cpp  networkaccessitemlist.h  networkaccesspresets.cpp  networkaccesspresets.h  networkinformation.cpp  networkinformation.h  neworkaccessmanager.cpp  neworkaccessmanager.h  postact.cpp  postact.h  postactivity.cpp  postactivity.h  poststudentactivity.cpp  poststudentactivity.h  usersession.cpp  usersession.h
src/coreLib/whisper/: CMakeLists.txt  whisperworker.cpp  whisperworker.h
src/modules/: CMakeLists.txt  EntryPoint.qml  Recognition_Shape_Explorer_Level1.qml  Recognition_Shape_Explorer_Level3.qml  recogaudiomanager.cpp
src/modules/ADHD/: CMakeLists.txt
src/modules/ADHD/Attention/: CMakeLists.txt  cognitiveengine.cpp  cognitiveengine.h  main.cpp  main.qml
src/modules/ADHD/CogniMaze/: CMakeLists.txt  CogniMazeMain.cpp  CogniMazeMain.qml  Neurodivergent_Doc.md  mazeengine.cpp  mazeengine.h
src/modules/ADHD/Jigsaw/: CLINICAL_DOCUMENTATION.md  CLINICAL_FORMULAS.md  CMakeLists.txt  JigsawGrid.qml  JigsawMain.qml  cognitive_engine.cpp  cognitive_engine.h  main.cpp
src/modules/ADHD/ShapeMatching/: ADHD_CLINICAL_TELEMETRY.txt  CMakeLists.txt  EasyPage.qml  HardPage.qml  MediumPage.qml  README.txt  ShapeItem.qml  ShapeMatchingMain.qml  main.cpp  qml.qrc  telemetrybackend.cpp  telemetrybackend.h
src/modules/Dyscalculia/: CMakeLists.txt
src/modules/Dyscalculia/ClumsyThief/: CMakeLists.txt  ClumsyMain.qml  MetricsDashboard.qml  README.md  gameengine.h
src/modules/Dyscalculia/ClumsyThief/qml/: Card.qml  GameBoard.qml  Main.qml  MetricsDashboard.qml
src/modules/Dyscalculia/ClumsyThief/src/: gameengine.cpp  gameengine.h  main.cpp
src/modules/Dyscalculia/MathDice/: CMakeLists.txt  DESIGN.md  MathDiceMain.qml  README.md  gameengine.cpp  gameengine.h  setup_structure.sh
src/modules/Dyscalculia/MathDice2/: CMakeLists.txt  CognitiveDashboard.qml  ConcentrationBooster.qml  MathDice2Main.cpp  MathDice2Main.qml  MathDiceBoard.qml  MersenneTwister.cpp  MersenneTwister.h
src/modules/Dyscalculia/Numicon/: ActivityLogger.h  CMakeLists.txt  GameEngine.h  LogViewer.qml  MetricItem.qml  MetricsTracker.h  NumiconMain.qml  NumiconTile.qml  README.md  backend_design.md
src/modules/Dyscalculia/Numicon/src/: main.cpp
src/modules/Dyscalculia/Numicon1/: CMakeLists.txt  NumiconMain.qml  NumiconShape.qml  README.md  gameengine.cpp  gameengine.h  gameenginen.cpp  gameenginen.h  main.cpp  main.qml  metrictracker.cpp  metrictracker.h  numicon_game.pro
src/modules/Dyscalculia/SumSwamp/: Main.qml  README.md  gameengine.cpp  gameengine.h  main.cpp  sample_log.json  sum_swamp_spec.md
src/modules/Dyscalculia/TenFrames/: CMakeLists.txt  Counter.qml  README.md  TenFrameBoard.qml  TenFramesMain.qml  architecture_design.md  gameenginex.cpp  gameenginex.h  metricsengine.h  qml.qrc  sessionlogger.h
src/modules/Dyscalculia/TenFrames/src/: Counter.qml  Main.qml  TenFrameBoard.qml  gameengine.cpp  gameengine.h  main.cpp  (+4 more)
src/modules/Dyscalculia/TinyPolkaDot/: CMakeLists.txt  Card.qml  Dashboard.qml  Main.qml  MetricBox.qml  README.md  gameengine.cpp  gameengine.h  main.cpp
src/modules/Dysgraphia/: CMakeLists.txt
src/modules/Dysgraphia/Jigsaw/: CMakeLists.txt  JigsawGrid.qml  JigsawPiece.qml
src/modules/Phonetics/: CMakeLists.txt
src/modules/Phonetics/RobotTalk/: CMakeLists.txt  README.md
src/modules/Phonetics/RobotTalk2/: CMakeLists.txt  main.cpp  main.qml  speechengine.cpp  speechengine.h
src/modules/Phonetics/WordAudioRecog/: CMakeLists.txt  DESIGN.md
src/modules/Phonetics/WordRecognitionGame/: CMakeLists.txt  WordRecognitionMain.qml  gameenginew.cpp  gameenginew.h  resources.qrc  word_list.txt  words_csv.txt
src/modules/Phonetics/WordRecognitionGame2/: CMakeLists.txt  README.md  WordRecog2Main.qml  qt6_kids_word_recognition_project.txt  speechprocessor.cpp  speechprocessor.h
src/modules/Recognition/: CMakeLists.txt  Recognition_Shape_Explorer_Level1.qml  Shapes_Level1.qml
src/modules/Recognition/ShapeExplorer/: README.md  Rabbit.qml
src/modules/ShapeExplorer/: CMakeLists.txt  Main.qml  QuitButton.qml  Rabbit.qml  Shape.qml  TargetSlot.qml  Telemetry.js  audiomanagerx.cpp  audiomanagerx.h  game_design_plan.md  recogaudiomanager.cpp  recogaudiomanager.h
src/modules/Writing/: CMakeLists.txt  WritingMainPlayGround.qml
src/modules/Writing/TracingLetter/: CMakeLists.txt  TracingLetterMain.qml  TracingWordMain.qml
(+128 files in other folders)
