
# find_package(Qt6 REQUIRED COMPONENTS Quick Core Gui Qml)
# qt_standard_project_setup()

# qt_add_executable(ADHD_CognitiveWhackAMole
#     main.cpp
#     cognitiveengine.h
#     cognitiveengine.cpp
# )

# qt_add_qml_module(ADHD_CognitiveWhackAMole
#     URI AdhdWhackProject
#     VERSION 1.0
#     QML_FILES
#     main.qml
#     SOURCES
#     cognitiveengine.h
#     cognitiveengine.cpp
# )

# target_link_libraries(ADHD_CognitiveWhackAMole PRIVATE
#     Qt6::Core
#     Qt6::Gui
#     Qt6::Qml
#     Qt6::Quick
# )
